--- a/src/screens/Chat/Chat.scss
+++ b/src/screens/Chat/Chat.scss
@@ -9,8 +9,9 @@
         justify-content: space-between;
         background: #ffffff;
         border-radius: 8px;
-        // height: 100%;
-        min-height: 100vh;
+        min-height: 400px;
+        height: 100vh;
+        max-height: 100vh;
         width: 40%;
       }
   }
